    of Units and UnitDefinitions works correctly.
    
  - The userObject in ASTNode has been replaced by a more general map
    of userObjects that is located in AbstractTreeNode. In this way, any
    JSBML object that is part of the SBML tree can now be attached with
    user-defined additional objects for in-memory manipulation. These
    will not be written to SBML later on.


* Bug Fixes:

  - It was forgotten to implement an unsetSubstanceUnits method on the Model
    class. Thanks to Robert Byrnes for reporting this problem.
  
  - The Compartment class did not override the getDerivedUnitDefinition
    method from its superclass. Hence, it was not possible to inherit
    Level 3 units from the model.
    
  - Also, the Species class did not take inherited Level 3 units from the
    Model into account. The getDerivedUnitDefinition method now has been
    corrected.

  - In the Reaction class, the setReversible method only accepted Boolean,
    no boolean.
    
  - Merging of Units was not correct: In cases that scales of two units 
    could not be evenly merged, just one of both was used, the second scale
    was ignored. In these cases, however, the scales must be removed and
    the double-valued multiplier must be used for representation. This is
    now implemented.
    
  - If during the simplification of UnitDefinitions a dimensionless unit
    was created by canceling terms, scale and multiplier were not merged
    correctly with other units because in dimensionless units scale was
    always 0 and multiplier was 1. Now, if some unit cancel, but a number
    of non-dimensionless units remain, the simplify method checks again
    the listOfUnits and tries to merge as many units as possible.
    
  - Scales of units could not be merged correctly if one of both scales
    was different from zero.
    
  - When unifying units in addition or subtraction within an ASTNode
    the scales were sometimes incorrectly merged.
    